# ade

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
hooks/: ade-claude-hook.sh
src/: acceptance.rs  app.rs  claude_status.rs  cwd.rs  debug.rs  duplicate_log.rs  embedded_term.rs  hosts.rs  install_hooks.rs  install_tmux.rs  main.rs  model.rs  notifications.rs  preview_pane.rs  refresh.rs  ssh_io.rs  state.rs  term_title.rs  test_harness.rs  text_field.rs  theme.rs  tui_lifecycle.rs  ui.rs
src/tmux/: local.rs  mod.rs  remote.rs
