[package]
name = "ade"
version = "0.1.0"
edition = "2021"
description = "Agentic Development Environment — cross-machine tmux session manager"
license = "MIT"

[[bin]]
name = "ade"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
