[package]
name = "ade"
version = "0.1.0"
edition = "2021"
description = "Agentic Development Environment — cross-machine tmux session manager"

[[bin]]
name = "ade"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ansi-to-tui = "7"
portable-pty = "0.9"
vt100 = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
